...
    <string name="action_sign_in_short">Login</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_login">Incorrect email address or password!</string>
    <string name="info_profile_deletion">Deleted profile successfully.</string>
    <string name="info_profile_reset_password">Reset password successfully. Please login with your new password.</string>
    <string name="action_forgot_password">Forgot Password ?</string>
    <string name="error_internal_server_error">Internal Server Error.</string>
    <string name="error_not_authenticated">Authentication Error. Please login again.</string>
    <string name="action_register_and_sign_in">Register &amp; sign in</string>
...
